# Biped_term_design

./: README.md
src/biped_control/: CMakeLists.txt  package.xml
src/biped_control/config/: legs_control.yaml
src/biped_control/launch/: biped_rgt.launch  legs_control.launch
src/biped_control/srv/: moveJ.srv
src/biped_description/: CMakeLists.txt  package.xml
src/biped_description/launch/: biped.rviz  biped_rviz.launch
src/biped_description/meshes/: Down_L_1.stl  Down_P_1.stl  UP_L_1.stl  UP_P_1.stl
src/biped_description/urdf/: biped.gazebo  biped.trans  biped.xacro  materials.xacro
src/biped_gazebo/: CMakeLists.txt  package.xml
src/biped_gazebo/launch/: biped_world.launch
src/biped_gazebo/worlds/: biped.world
