<?xml version="1.0"?>
<package format="2">
  <name>biped_control</name>
  <version>1.0.0</version>
  <description>The biped_control package</description>

  <maintainer email="blazej.gawecki@put.poznan.pl">Blazej Gawecki</maintainer>

  <license>TODO</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>effort_controllers</exec_depend>


  <export>
  </export>

</package>
