<?xml version="1.0"?>
<package format="2">
  <name>biped_description</name>
  <version>1.0.0</version>
  <description>The leg_description package</description>

  <maintainer email="blazej.gawecki@put.poznan.pl">Blazej Gawecki</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
